--- a/chat-server/environments/api_chat.yml
+++ b/chat-server/environments/api_chat.yml
@@ -12,7 +12,8 @@ env:
 
 envSecrets:
   MONGODB_CONNECTION_URI: api-chat-demo
-  OPENAI_ENDPOINT: api-chat-demo
+  # TODO: bring back in when using radiant
+  # OPENAI_ENDPOINT: api-chat-demo
   OPENAI_API_KEY: api-chat-demo
   OPENAI_EMBEDDING_DEPLOYMENT: api-chat-demo
   OPENAI_CHAT_COMPLETION_DEPLOYMENT: api-chat-demo
