Fix drone issue

--- a/.drone.yml
+++ b/.drone.yml
@@ -275,7 +275,9 @@ name: api-chat-deploy-chat-server
 
 trigger:
   event:
-    - push
+    - promote
+  target:
+    - staging
   branch:
     - api_chat
 
