--- a/.drone.yml
+++ b/.drone.yml
@@ -290,7 +290,7 @@ steps:
       chart_version: 4.12.3
       add_repos: [mongodb=https://10gen.github.io/helm-charts]
       namespace: docs
-      release: chat-server-qa
+      release: api-chat-server
       values: image.tag=git-${DRONE_COMMIT_SHA:0:7}-api-chat,image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/docs/${DRONE_REPO_NAME}-chat-server,ingress.enabled=true,ingress.hosts[0]=api-chat.docs.staging.corp.mongodb.com
       values_files: ["chat-server/environments/api_chat.yml"]
       api_server: https://api.staging.corp.mongodb.com
