working search func

--- a/mongodb-chatgpt-plugin/chat-gpt-plugin.yaml
+++ b/mongodb-chatgpt-plugin/chat-gpt-plugin.yaml
@@ -8,7 +8,7 @@ info:
 servers:
   - url: https://TODO:.swagger.io/v1
 paths:
-  /pets:
+  /content:
     get:
       security: []
       summary: Get content search results
