--- a/chat-ui/package.json
+++ b/chat-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mongodb-chatbot-ui",
-  "version": "0.0.8",
+  "version": "0.1.0-0",
   "description": "UI for the MongoDB AI Chatbot",
   "author": "MongoDB, Inc.",
   "license": "Apache-2.0",
