--- a/.drone.yml
+++ b/.drone.yml
@@ -305,7 +305,7 @@
 # Ingest service
 # ---
 ---
-depends_on: ["test-all"]
+# depends_on: ["test-all"]
 kind: pipeline
 type: kubernetes
 name: staging-build-ingest-mongodb-public
