Use a more specific env variable name

--- a/.npmrc
+++ b/.npmrc
@@ -5,4 +5,4 @@
 //artifactory.corp.mongodb.com/artifactory/api/npm/leafygreen-ui/:email=${LG_ARTIFACTORY_EMAIL}
 //artifactory.corp.mongodb.com/artifactory/api/npm/leafygreen-ui/:always-auth=true
 
-//registry.npmjs.org/:_authToken=${NPM_TOKEN}
+//registry.npmjs.org/:_authToken=${MONGODB_EAI_NPM_TOKEN}
