--- a/docs/package.json
+++ b/docs/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
-    "build": "docusaurus build",
+    "build": "docusaurus build  --help",
     "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy",
+    "deploy": "git checkout gh-pages && docusaurus build --out-dir ../docs-build && git add ../docs-build && git commit -m 'Update docs' && git push upstream gh-pages && git checkout main",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
