--- a/ingest-mongodb-public/.env.example
+++ b/ingest-mongodb-public/.env.example
@@ -12,6 +12,7 @@ VECTOR_SEARCH_INDEX_NAME=<index_name>
 NODE_ENV=development
 # Connection string for DevCenter
 DEVCENTER_CONNECTION_URI="mongodb+srv://<username>:<password>@devhub-cluster.sewho.mongodb.net/?retryWrites=true&w=majority"
-
+# For connecting to MongoDB University Data API
+UNIVERSITY_DATA_API_KEY=abc123
 # For use with GitHubDataSource. The token only needs read access to the repo.
 GITHUB_ACCESS_TOKEN=ghp_TOKENTOKENTOKEN
