--- a/docs-example-generator/package.json
+++ b/docs-example-generator/package.json
@@ -10,7 +10,7 @@
     "build": "tsc",
     "start": "node build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "scratchpad:bluehawkify": "npm run build && node build/bluehawkify.js ./examples/inputs/insertOne.ts ../docs-example-generator/examples/outputs-insertOne.rs ./transformations/ts2ts_bluehawk.yaml"
+    "dev": "npm run build && node build/bluehawkify.js ./examples/inputs/insertOne.ts ../docs-example-generator/examples/outputs-insertOne.rs ./transformations/ts2ts_bluehawk.yaml"
   },
   "keywords": [],
   "author": "Nick Larew",
