fix drone artifactory creds

--- a/.drone.yml
+++ b/.drone.yml
@@ -497,10 +497,8 @@ steps:
       - npm run build -- --scope mongodb-rag-core
       - cd chat-core && npm publish
     environment:
-      LG_ARTIFACTORY_PASSWORD:
-        from_secret: lg_artifactory_password
-      LG_ARTIFACTORY_USERNAME:
-        from_secret: lg_artifactory_username
+      LG_ARTIFACTORY_TOKEN:
+        from_secret: lg_artifactory_token
       LG_ARTIFACTORY_EMAIL:
         from_secret: lg_artifactory_email
       MONGODB_EAI_NPM_TOKEN:
@@ -531,10 +529,8 @@ steps:
       - npm run build -- --scope='{mongodb-rag-core,mongodb-rag-ingest}'
       - cd ingest && npm publish
     environment:
-      LG_ARTIFACTORY_PASSWORD:
-        from_secret: lg_artifactory_password
-      LG_ARTIFACTORY_USERNAME:
-        from_secret: lg_artifactory_username
+      LG_ARTIFACTORY_TOKEN:
+        from_secret: lg_artifactory_token
       LG_ARTIFACTORY_EMAIL:
         from_secret: lg_artifactory_email
       MONGODB_EAI_NPM_TOKEN:
@@ -564,10 +560,8 @@ steps:
       - npm run build -- --scope='{mongodb-rag-core,mongodb-chatbot-server}'
       - cd chat-server && npm publish
     environment:
-      LG_ARTIFACTORY_PASSWORD:
-        from_secret: lg_artifactory_password
-      LG_ARTIFACTORY_USERNAME:
-        from_secret: lg_artifactory_username
+      LG_ARTIFACTORY_TOKEN:
+        from_secret: lg_artifactory_token
       LG_ARTIFACTORY_EMAIL:
         from_secret: lg_artifactory_email
       MONGODB_EAI_NPM_TOKEN:
