--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mongodb-chatbot-server",
-  "version": "0.2.0",
+  "version": "0.2.1-0",
   "license": "Apache-2.0",
   "description": "A chatbot server for retrieval augmented generation (RAG).",
   "author": "MongoDB, Inc.",
@@ -11,7 +11,8 @@
   },
   "files": [
     "dist",
-    "README.md"
+    "README.md",
+    "static"
   ],
   "main": "./dist/index.js",
   "scripts": {
