--- a/.drone.yml
+++ b/.drone.yml
@@ -66,6 +66,7 @@ name: staging-build-chat-server
 trigger:
   branch:
     - main
+    - EAI-49 # TODO: remove before merge
   event:
     - push
 
@@ -130,6 +131,7 @@ trigger:
       - chat-ui/**/*
   branch:
     - main
+    - EAI-49 # TODO: remove before merge
 
 steps:
   # Deploys docker image associated with staging build that triggered promotion
