--- a/docs-example-generator/package.json
+++ b/docs-example-generator/package.json
@@ -11,9 +11,10 @@
     "start": "node build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npm run build && node build/generate.js",
-    "dev:node:insertOne.ts": "npm run dev -- ./examples/node/inputs/insertOne.ts",
-    "dev:kotlin:InsertTest.kt": "npm run dev -- ./examples/kotlin/tests/InsertTest.kt",
-    "dev:kotlin:DeleteTest.kt": "npm run dev -- ./examples/kotlin/tests/DeleteTest.kt"
+    "dev:node:insertOne.ts": "npm run dev -- generateCodeExample ./examples/node/snippets/insertOne.ts",
+    "dev:node:indexes.txt": "npm run dev -- generateDocsPage ./examples/node/pages/indexes.txt",
+    "dev:kotlin:InsertTest.kt": "npm run dev -- testPlayground ./examples/kotlin/tests/InsertTest.kt",
+    "dev:kotlin:DeleteTest.kt": "npm run dev -- testPlayground ./examples/kotlin/tests/DeleteTest.kt"
   },
   "keywords": [],
   "author": "Nick Larew",
