update release confs

--- a/packages/mongodb-chatbot-ui/.release-it.json
+++ b/packages/mongodb-chatbot-ui/.release-it.json
@@ -18,7 +18,7 @@
   },
   "hooks": {
     "before:init": [
-      "pushd ../chat-core && npm i && npm run build && popd",
+      "pushd ../mongodb-rag-core && npm i && npm run build && popd",
       "npm run build:component",
       "npm run lint"
     ]
