--- a/packages/ingest-mongodb-public/.release-it.json
+++ b/packages/ingest-mongodb-public/.release-it.json
@@ -17,7 +17,7 @@
   },
   "hooks": {
     "before:init": [
-      "pushd ../chat-core && npm i && npm run build && popd",
+      "pushd ../mongodb-rag-core && npm i && npm run build && popd",
       "npm run build",
       "npm run lint",
       "npm run test"
