--- a/packages/scripts/.release-it.json
+++ b/packages/scripts/.release-it.json
@@ -17,8 +17,8 @@
   },
   "hooks": {
     "before:init": [
-      "pushd ../chat-core && npm i && npm run build && popd",
-      "pushd ../chat-server && npm i && npm run build && popd",
+      "pushd ../mongodb-rag-core && npm i && npm run build && popd",
+      "pushd ../mongodb-chatbot-server && npm i && npm run build && popd",
       "npm run build"
     ]
   },
