--- a/packages/ingest-mongodb-public/.release-it.json
+++ b/packages/ingest-mongodb-public/.release-it.json
@@ -18,17 +18,7 @@
   "hooks": {
     "before:init": [
       "pushd ../mongodb-rag-core && npm i && npm run build && popd",
-      "npm run build",
-      "npm run lint",
-      "npm run test"
+      "npm run build"
     ]
-  },
-  "plugins": {
-    "@release-it/bumper": {
-      "out": {
-        "file": "package.json",
-        "path": ["dependencies.mongodb-rag-core"]
-      }
-    }
   }
 }
