--- a/packages/ingest-mongodb-public/environments/production.yml
+++ b/packages/ingest-mongodb-public/environments/production.yml
@@ -5,7 +5,7 @@ image:
 cronJobs:
   - name: ingest-all-content
     schedule: "0 6 * * *" # every day at 6am UTC (1AM EST)
-    command: ["npm", "run", "ingest:all"]
+    command: ["npm", "run", "ingest:k8s"]
     env:
       OPENAI_EMBEDDING_MODEL: text-embedding-ada-002
       OPENAI_EMBEDDING_MODEL_VERSION: 2023-06-01-preview
