--- a/packages/ingest-mongodb-public/package.json
+++ b/packages/ingest-mongodb-public/package.json
@@ -15,7 +15,7 @@
     "watch": "tsc -b -w",
     "release": "release-it",
     "ingest:all": "ingest all --config ./build/config.js",
-    "ingest:k8s": "../../node_modules/.bin/ingest all --config ./build/config.js",
+    "ingest:k8s": "../../node_modules/mongodb-rag-ingest/build/main.js all --config ./build/config.js",
     "ingest:pages": "ingest pages --config ./build/config.js",
     "ingest:embed": "ingest embed --config ./build/config.js"
   },
