--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "build": "lerna run build",
     "test": "lerna run test",
     "lint": "lerna run lint",
-    "release:chat-ui": "lerna run release --scope='mongodb-chatbot-ui' && git add ./package-lock.json && git commit --amend --no-edit"
+    "release:chat-ui": "lerna run release --scope='mongodb-chatbot-ui' && git add ./package-lock.json && git commit --amend --no-edit",
+    "scripts:analyzeMessages": "lerna run analyzeMessages --scope='scripts'",
+    "scripts:scrubMessages": "lerna run scrubMessages --scope='scripts'"
   },
   "devDependencies": {
     "lerna": "^5.6.2"
