--- a/packages/scripts/environments/staging.yml
+++ b/packages/scripts/environments/staging.yml
@@ -5,7 +5,7 @@ image:
 cronJobs:
   - name: scrub
     schedule: "0 6 * * *" # every day at 6am UTC
-    command: ["node", "./build/scrubMessages.js"]
+    command: ["npm", "run", "scripts:scrubMessages"]
     env:
       MONGODB_DATABASE_NAME: docs-chatbot-staging
     envSecrets:
@@ -22,7 +22,7 @@ cronJobs:
 
   - name: analyze
     schedule: "0 7 * * *" # every day at 7am UTC
-    command: ["node", "./build/analyzeMessages.js"]
+    command: ["npm", "run", "scripts:analyzeMessages"]
     env:
       MONGODB_DATABASE_NAME: docs-chatbot-staging
       OPENAI_CHAT_COMPLETION_MODEL_VERSION: 2023-06-01-preview
