--- a/.drone.yml
+++ b/.drone.yml
@@ -610,6 +610,7 @@ name: staging-build-scripts-service
 trigger:
   branch:
     - main
+    - scripts_fix
   event:
     - push
   paths:
@@ -670,6 +671,7 @@ trigger:
       - packages/mongodb-chatbot-server/**/*
   branch:
     - main
+    - scripts_fix
 
 steps:
   # Deploys docker image associated with staging build that triggered promotion
