--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -8,6 +8,7 @@
     "createQualityTestsYaml-aug-2023": "npm run build && node ./build/createAug2023QualityTestsYaml.js",
     "createQualityTestsYaml-sept-2023": "npm run build && node ./build/createSept2023QualityTestsYaml.js",
     "scrubMessages": "npm run build && node ./build/scrubMessages.js",
+    "sampleAndSaveMarkdownPages": "npm run build && node ./build/sampleAndSaveMarkdownPages.js",
     "analyzeMessages": "npm run build && node ./build/analyzeMessages.js",
     "createView/messages_by_rating": "npm run build && node ./build/createView/messages_by_rating.js",
     "createView/top_250_references": "npm run build && node ./build/createView/top_250_references.js",
