--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "lint": "lerna run lint",
     "release:chat-ui": "lerna run release --scope='mongodb-chatbot-ui' && git add ./package-lock.json && git commit --amend --no-edit",
     "scripts:analyzeMessages": "lerna run analyzeMessages --scope='scripts'",
-    "scripts:scrubMessages": "lerna run scrubMessages --scope='scripts'"
+    "scripts:scrubMessages": "lerna run scrubMessages --scope='scripts'",
+    "server:start": "lerna run start --scope='chatbot-server-mongodb-public'"
   },
   "devDependencies": {
     "lerna": "^5.6.2"
