--- a/packages/mongodb-rag-core/.release-it.json
+++ b/packages/mongodb-rag-core/.release-it.json
@@ -1,18 +1,20 @@
 {
   "git": {
     "commitArgs": ["-a"],
-    "commitMessage": "Release mongodb-rag-core v${version}\n\n${changelog}",
-    "changelog": "git log --pretty=format:\"* %s (%h)\" ${from}..${to} -- .",
+    "commitMessage": "Release ${npm.name} v${version}",
+    "changelog": "git log --pretty=format:'* %s (%h)' ${latestTag}..HEAD -- .",
+    "tagMatch": "${npm.name}-*",
+    "getLatestTagFromAllRefs": true,
     "tag": true,
     "push": true,
     "pushRepo": "upstream",
-    "tagName": "mongodb-rag-core-v${version}"
+    "tagName": "${npm.name}-v${version}"
   },
   "npm": {
     "publish": false
   },
   "github": {
-    "releaseName": "mongodb-rag-core-v${version}",
+    "releaseName": "${npm.name}-v${version}",
     "draft": true,
     "release": true
   },
