--- a/packages/chatbot-server-mongodb-public/.release-it.json
+++ b/packages/chatbot-server-mongodb-public/.release-it.json
@@ -1,17 +1,20 @@
 {
   "git": {
     "commitArgs": ["-a"],
-    "commitMessage": "Release chatbot-server-mongodb-public v${version}",
-    "tag": false,
+    "commitMessage": "Release ${npm.name} v${version}",
+    "changelog": "git log --pretty=format:'* %s (%h)' ${latestTag}..HEAD -- .",
+    "tagMatch": "${npm.name}-*",
+    "getLatestTagFromAllRefs": true,
+    "tag": true,
     "push": true,
     "pushRepo": "upstream",
-    "tagName": "chatbot-server-mongodb-public-v${version}"
+    "tagName": "${npm.name}-v${version}"
   },
   "npm": {
     "publish": false
   },
   "github": {
-    "releaseName": "chatbot-server-mongodb-public-v${version}",
+    "releaseName": "${npm.name}-v${version}",
     "draft": true,
     "release": true
   },
