--- a/packages/scripts/.release-it.json
+++ b/packages/scripts/.release-it.json
@@ -1,17 +1,20 @@
 {
   "git": {
     "commitArgs": ["-a"],
-    "commitMessage": "Release scripts v${version}",
-    "tag": false,
+    "commitMessage": "Release ${npm.name} v${version}",
+    "changelog": "git log --pretty=format:'* %s (%h)' ${latestTag}..HEAD -- .",
+    "tagMatch": "${npm.name}-*",
+    "getLatestTagFromAllRefs": true,
+    "tag": true,
     "push": true,
     "pushRepo": "upstream",
-    "tagName": "scripts-v${version}"
+    "tagName": "${npm.name}-v${version}"
   },
   "npm": {
     "publish": false
   },
   "github": {
-    "releaseName": "scripts-v${version}",
+    "releaseName": "${npm.name}-v${version}",
     "draft": true,
     "release": true
   },
@@ -21,13 +24,5 @@
       "pushd ../mongodb-chatbot-server && npm i && npm run build && popd",
       "npm run build"
     ]
-  },
-  "plugins": {
-    "@release-it/bumper": {
-      "out": {
-        "file": "package.json",
-        "path": ["dependencies.mongodb-chatbot-server"]
-      }
-    }
   }
 }
