--- a/packages/mongodb-atlas/.env.example
+++ b/packages/mongodb-atlas/.env.example
@@ -1,6 +1,7 @@
 GROUP_ID=<Atlas Project ID>
 CLUSTER_NAME=<Atlas Cluster Name>
 DB_NAME=docs-chatbot-dev
+ATLAS_VECTOR_SEARCH_INDEX_NAME=vector_index
 CONVERSATIONS_TTL_SECONDS=31536000 # 1 year
 CONVERSATIONS_COLL_NAME=conversations
 CONTENT_METADATA_COLL_NAME=pages
