--- a/packages/chatbot-server-mongodb-public/environments/qa.yml
+++ b/packages/chatbot-server-mongodb-public/environments/qa.yml
@@ -6,7 +6,7 @@ env:
   OPENAI_EMBEDDING_MODEL: text-embedding-ada-002
   OPENAI_EMBEDDING_MODEL_VERSION: 2023-03-15-preview
   MONGODB_DATABASE_NAME: docs-chatbot-qa-2023-10-19
-  VECTOR_SEARCH_INDEX_NAME: default
+  VECTOR_SEARCH_INDEX_NAME: vector_index
   OPENAI_CHAT_COMPLETION_MODEL_VERSION: 2023-06-01-preview
   ENVIRONMENT: qa
   NODE_ENV: qa
