--- a/packages/ingest-mongodb-public/environments/staging.yml
+++ b/packages/ingest-mongodb-public/environments/staging.yml
@@ -10,10 +10,37 @@ cronJobs:
       OPENAI_EMBEDDING_MODEL: text-embedding-ada-002
       OPENAI_EMBEDDING_MODEL_VERSION: 2023-03-15-preview
       MONGODB_DATABASE_NAME: docs-chatbot-staging
-      VECTOR_SEARCH_INDEX_NAME: default
+      VECTOR_SEARCH_INDEX_NAME: vector_index
       OPENAI_CHAT_COMPLETION_MODEL_VERSION: 2023-06-01-preview
     envSecrets:
       MONGODB_CONNECTION_URI: docs-chatbot-staging
+      OPENAI_ENDPOINT: docs-chatbot-staging
+      OPENAI_API_KEY: docs-chatbot-staging
+      OPENAI_EMBEDDING_DEPLOYMENT: docs-chatbot-staging
+      OPENAI_CHAT_COMPLETION_DEPLOYMENT: docs-chatbot-staging
+      DEVCENTER_CONNECTION_URI: docs-chatbot-staging
+      GITHUB_ACCESS_TOKEN: docs-chatbot-staging
+      UNIVERSITY_DATA_API_KEY: docs-chatbot-staging
+    resources:
+      # guaranteed amount of resources
+      requests:
+        cpu: 100m
+        memory: 2Gi
+      # maximum allowed resources
+      limits:
+        cpu: 500m
+        memory: 5Gi
+  - name: ingest-content-test
+    schedule: "0 8 * * *" # every day at 8am UTC (3AM EST)
+    command: ["npm", "run", "ingest:k8s"]
+    env:
+      OPENAI_EMBEDDING_MODEL: text-embedding-ada-002
+      OPENAI_EMBEDDING_MODEL_VERSION: 2023-03-15-preview
+      MONGODB_DATABASE_NAME: docs-chatbot-test
+      VECTOR_SEARCH_INDEX_NAME: vector_index
+      OPENAI_CHAT_COMPLETION_MODEL_VERSION: 2023-06-01-preview
+    envSecrets:
+      MONGODB_CONNECTION_URI: docs-chatbot-test
       OPENAI_ENDPOINT: docs-chatbot-staging
       OPENAI_API_KEY: docs-chatbot-staging
       OPENAI_EMBEDDING_DEPLOYMENT: docs-chatbot-staging
