--- a/.drone.yml
+++ b/.drone.yml
@@ -21,39 +21,38 @@ steps:
   - name: test
     image: node:18
     commands:
-      - echo "skipping for testing purposes"
-    #   - npm ci
-    #   - npm run build
-    #   - npm run lint
-    #   - npm run test
+      - npm ci
+      - npm run build
+      - npm run lint
+      - npm run test
 
-    # environment:
-    #   PORT: 3000
-    #   OPENAI_EMBEDDING_MODEL: text-embedding-ada-002
-    #   OPENAI_EMBEDDING_MODEL_VERSION: 2023-03-15-preview
-    #   MONGODB_DATABASE_NAME: docs-chatbot-test
-    #   VECTOR_SEARCH_INDEX_NAME: vector_index
-    #   OPENAI_CHAT_COMPLETION_MODEL_VERSION: 2023-06-01-preview
-    #   MONGODB_CONNECTION_URI:
-    #     from_secret: mongodb_connection_uri
-    #   OPENAI_ENDPOINT:
-    #     from_secret: openai_endpoint
-    #   OPENAI_API_KEY:
-    #     from_secret: openai_api_key
-    #   OPENAI_EMBEDDING_DEPLOYMENT:
-    #     from_secret: openai_embedding_deployment
-    #   OPENAI_CHAT_COMPLETION_DEPLOYMENT:
-    #     from_secret: openai_chat_completion_deployment
-    #   DEVCENTER_CONNECTION_URI:
-    #     from_secret: devcenter_connection_uri
-    #   LG_ARTIFACTORY_TOKEN:
-    #     from_secret: lg_artifactory_token
-    #   LG_ARTIFACTORY_EMAIL:
-    #     from_secret: lg_artifactory_email
-    #   GITHUB_ACCESS_TOKEN:
-    #     from_secret: github_access_token
-    #   UNIVERSITY_DATA_API_KEY:
-    #     from_secret: university_data_api_key
+    environment:
+      PORT: 3000
+      OPENAI_EMBEDDING_MODEL: text-embedding-ada-002
+      OPENAI_EMBEDDING_MODEL_VERSION: 2023-03-15-preview
+      MONGODB_DATABASE_NAME: docs-chatbot-test
+      VECTOR_SEARCH_INDEX_NAME: vector_index
+      OPENAI_CHAT_COMPLETION_MODEL_VERSION: 2023-06-01-preview
+      MONGODB_CONNECTION_URI:
+        from_secret: mongodb_connection_uri
+      OPENAI_ENDPOINT:
+        from_secret: openai_endpoint
+      OPENAI_API_KEY:
+        from_secret: openai_api_key
+      OPENAI_EMBEDDING_DEPLOYMENT:
+        from_secret: openai_embedding_deployment
+      OPENAI_CHAT_COMPLETION_DEPLOYMENT:
+        from_secret: openai_chat_completion_deployment
+      DEVCENTER_CONNECTION_URI:
+        from_secret: devcenter_connection_uri
+      LG_ARTIFACTORY_TOKEN:
+        from_secret: lg_artifactory_token
+      LG_ARTIFACTORY_EMAIL:
+        from_secret: lg_artifactory_email
+      GITHUB_ACCESS_TOKEN:
+        from_secret: github_access_token
+      UNIVERSITY_DATA_API_KEY:
+        from_secret: university_data_api_key
 
 # ---
 # Chat Server pipelines
