--- a/.drone.yml
+++ b/.drone.yml
@@ -66,7 +66,7 @@ name: staging-build-chat-server
 trigger:
   branch:
     - main
-    - fix_staging_static_site
+    - EAI-143 # TODO:remove before merge
   event:
     - push
 
@@ -131,7 +131,7 @@ trigger:
       - packages/mongodb-chatbot-ui/**/*
   branch:
     - main
-    - fix_staging_static_site
+    - EAI-143 # TODO:remove before merge
 
 steps:
   # Deploys docker image associated with staging build that triggered promotion
