--- a/.drone.yml
+++ b/.drone.yml
@@ -31,7 +31,7 @@ steps:
       OPENAI_EMBEDDING_MODEL: text-embedding-ada-002
       OPENAI_EMBEDDING_MODEL_VERSION: 2023-03-15-preview
       MONGODB_DATABASE_NAME: docs-chatbot-test
-      VECTOR_SEARCH_INDEX_NAME: default
+      VECTOR_SEARCH_INDEX_NAME: vector_index
       OPENAI_CHAT_COMPLETION_MODEL_VERSION: 2023-06-01-preview
       MONGODB_CONNECTION_URI:
         from_secret: mongodb_connection_uri
@@ -66,7 +66,7 @@ name: staging-build-chat-server
 trigger:
   branch:
     - main
-    - fix_staging_static_site
+    - EAI-143 # TODO:remove before merge
   event:
     - push
 
@@ -131,7 +131,7 @@ trigger:
       - packages/mongodb-chatbot-ui/**/*
   branch:
     - main
-    - fix_staging_static_site
+    - EAI-143 # TODO:remove before merge
 
 steps:
   # Deploys docker image associated with staging build that triggered promotion
@@ -319,6 +319,7 @@ name: staging-build-ingest-mongodb-public
 trigger:
   branch:
     - main
+    - EAI-143 # TODO: remove before merge
   event:
     - push
   paths:
@@ -379,6 +380,7 @@ trigger:
       - packages/mongodb-rag-core/**/*
   branch:
     - main
+    - EAI-143 # TODO: remove before merge
 
 steps:
   # Deploys docker image associated with staging build that triggered promotion
