--- a/packages/mongodb-chatbot-ui/package.json
+++ b/packages/mongodb-chatbot-ui/package.json
@@ -1,10 +1,21 @@
 {
   "name": "mongodb-chatbot-ui",
   "version": "0.1.2",
-  "description": "UI for the MongoDB AI Chatbot",
+  "description": "UI React components for the MongoDB Chatbot Framework",
   "author": "MongoDB, Inc.",
   "license": "Apache-2.0",
-  "keywords": [],
+  "keywords": [
+    "retrieval-augmented-generation",
+    "rag",
+    "chatbot",
+    "mongodb",
+    "mongodb-chatbot-framework"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mongodb/chatbot.git"
+  },
+  "homepage": "https://mongodb.github.io/chatbot/ui/",
   "engines": {
     "node": ">=18",
     "npm": ">=8"
