stub out quick start

--- a/lerna.json
+++ b/lerna.json
@@ -3,5 +3,7 @@
   "useNx": true,
   "useWorkspaces": true,
   "version": "independent",
-  "packages": ["packages/*"]
+  "packages": [
+    "packages/*"
+  ]
 }
