--- a/examples/quick-start/packages/server/package.json
+++ b/examples/quick-start/packages/server/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "basic-chatbot-server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "server",
+  "version": "0.0.0",
+  "description": "Quick start for MongoDB Chatbot Server",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
@@ -13,13 +12,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "dotenv": "^16.3.1",
     "nodemon": "^3.0.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "@azure/openai": "^1.0.0-beta.6",
+    "@types/node": "^16.0.0",
     "express": "^4.18.2",
-    "mongodb-chatbot-server": "0.2.1-0",
-    "@types/node": "^16.0.0"
+    "mongodb-chatbot-server": "*"
   }
 }
