--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,5 @@
 {
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
   "useNx": true,
-  "useWorkspaces": true,
-  "version": "independent",
-  "packages": [
-    "packages/*"
-  ]
+  "version": "independent"
 }
