quick start stub + starT

--- a/examples/quick-start/.env.example
+++ b/examples/quick-start/.env.example
@@ -1,7 +1,7 @@
 # MongoDB config
-MONGODB_CONNECTION_URI=<MongoDB connection URI with Atlas Vector Search configured on 'embedded_content'>
-MONGODB_DATABASE_NAME=<MongoDB database name>
-VECTOR_SEARCH_INDEX_NAME=<Vector Search index name>
+MONGODB_CONNECTION_URI="<MongoDB connection URI with Atlas Vector Search configured on 'embedded_content'>"
+VECTOR_SEARCH_INDEX_NAME="vector-index" # or whatever your index name is
+MONGODB_DATABASE_NAME="mongodb-chatbot-framework-chatbot" # or whatever your database name is. must contain vector search index.
 
 # OpenAI config
 OPENAI_API_KEY=<OpenAI API key>
