quick start draft complete

--- a/examples/quick-start/.env.example
+++ b/examples/quick-start/.env.example
@@ -1,6 +1,6 @@
 # MongoDB config
 MONGODB_CONNECTION_URI="<MongoDB connection URI with Atlas Vector Search configured on 'embedded_content'>"
-VECTOR_SEARCH_INDEX_NAME="vector-index" # or whatever your index name is
+VECTOR_SEARCH_INDEX_NAME="vector_index" # or whatever your index name is
 MONGODB_DATABASE_NAME="mongodb-chatbot-framework-chatbot" # or whatever your database name is. must contain vector search index.
 
 # OpenAI config
