--- a/packages/chatbot-server-mongodb-public/package.json
+++ b/packages/chatbot-server-mongodb-public/package.json
@@ -35,14 +35,13 @@
     "ip-address": "^8.1.0",
     "langchain": "^0.0.148",
     "lodash.clonedeep": "^4.5.0",
+    "mongodb-chatbot-server": "*",
     "openai": "^3.2.1",
     "pm2": "^5.3.0",
     "rate-limit-mongo": "^2.3.2",
     "stream-json": "^1.8.0",
-    "typechat": "^0.0.10",
     "winston": "^3.9.0",
-    "zod-error": "^1.5.0",
-    "mongodb-chatbot-server": "*"
+    "zod-error": "^1.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
