--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -16,6 +16,7 @@
     "createView/scrubbed_messages_by_rating": "npm run build && node ./build/createView/scrubbed_messages_by_rating.js",
     "createView/scrubbed_top_250_references": "npm run build && node ./build/createView/scrubbed_top_250_references.js",
     "createView/scrubbed_topics": "npm run build && node ./build/createView/scrubbed_topics.js",
+    "removeTestDatabases": "npm run build && node ./build/removeTestDatabases.js",
     "test": "jest --forceExit",
     "build": "npm run clean && tsc -b",
     "postbuild": "cp ./src/MessageAnalysis.d.ts ./build/",
