--- a/packages/mongodb-chatbot-ui/package.json
+++ b/packages/mongodb-chatbot-ui/package.json
@@ -102,6 +102,7 @@
     "@lg-chat/message-rating": "^1.1.3",
     "@microsoft/fetch-event-source": "^2.0.1",
     "buffer": "^6.0.3",
+    "classnames": "^2.5.1",
     "esbuild": "^0.17.19",
     "mongodb-rag-core": "^0.0.5",
     "prettier": "^2.8.8",
