--- a/packages/mongodb-rag-core/tsconfig.json
+++ b/packages/mongodb-rag-core/tsconfig.json
@@ -1,24 +1,7 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./build",
-    "allowJs": false,
-    "target": "es2016",
-    "module": "CommonJS",
-    "esModuleInterop": true,
-    "downlevelIteration": true,
-    "strictNullChecks": true,
-    "strict": true,
-    "declaration": true,
-    "declarationMap": true,
-    "resolveJsonModule": true,
-    "moduleResolution": "node",
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "baseUrl": "./src",
-    "rootDir": "./src",
-    "lib": ["ES2020"]
+    "outDir": "./build"
   },
-  "sourceMap": true,
-  "include": ["./src/**/*.ts"],
-  "exclude": ["**/*.test.ts"]
+  "include": ["./src/**/*.ts"]
 }
